--- a/presentation-android-mvp/src/main/res/values/strings.xml
+++ b/presentation-android-mvp/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
   -->
 
 <resources>
-    <string name="app_name">Yelp Search</string>
+    <string name="app_name">Business Search MVP</string>
 </resources>
