Added Business details stub classes

--- a/presentation-android-mvp/src/main/res/values/strings.xml
+++ b/presentation-android-mvp/src/main/res/values/strings.xml
@@ -21,11 +21,12 @@
     <!-- literals -->
     <string name="click_to_retry">Click to retry</string>
     <string name="closed">Closed</string>
+    <string name="current_location">Current location</string>
     <string name="list_view">List View</string>
     <string name="map_view">Map View</string>
     <string name="open">Open</string>
     <string name="search">Search</string>
-    <string name="current_location">Current location</string>
+    <string name="search_for_businesses">Search for Businesses</string>
     <string name="using_current_location">Using current location</string>
 
     <!-- hints -->
