--- a/presentation-android-mvp/src/main/res/values/strings.xml
+++ b/presentation-android-mvp/src/main/res/values/strings.xml
@@ -23,13 +23,18 @@
     <string name="click_to_retry">Click to retry</string>
     <string name="closed">Closed</string>
     <string name="current_location">Current location</string>
+    <string name="delivery">Delivery</string>
     <string name="hours">Hours</string>
     <string name="list_view">List View</string>
     <string name="map_view">Map View</string>
+    <string name="no">Yes</string>
     <string name="open">Open</string>
+    <string name="pickup">Pickup</string>
+    <string name="reservation">Reservation</string>
     <string name="search">Search</string>
     <string name="using_current_location">Using current location</string>
     <string name="website">Website</string>
+    <string name="yes">Yes</string>
 
     <!-- formatted -->
     <string name="distance">%1$.1f mi</string>
